deploy/k8s/overlays/prod/patches/deployment-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
spec:
  replicas: 3
